--- a/WebApplication1/WebApplication1/Web.config
+++ b/WebApplication1/WebApplication1/Web.config
@@ -62,4 +62,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+<system.web>
+    <authentication mode="Forms">
+          <forms timeout="3"/>
+    </authentication>
+
+    <sessionState timeout="3"  />
+</system.web>
 </configuration>
